--- a/androidApp/GophertainmentAndroid/app/src/main/res/layout/activity_main.xml
+++ b/androidApp/GophertainmentAndroid/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,15 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         tools:context="com.gophertainment.gophertainmentandroid.MainActivity">
 
-    <TextView
-            android:layout_width="wrap_content"
+    <EditText
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Hello World!"/>
+            android:inputType="textCapCharacters"
+            android:ems="10"
+            android:id="@+id/editText"
+            android:hint="@string/search_hint"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"/>
+
 </RelativeLayout>
