[IOS] - added extensions file to separate helper functions

--- a/iosApp/Gophertainment/Gophertainment/Base.lproj/Main.storyboard
+++ b/iosApp/Gophertainment/Gophertainment/Base.lproj/Main.storyboard
@@ -60,7 +60,7 @@
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L6G-Cz-d4T" userLabel="YearLabel">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L6G-Cz-d4T" userLabel="YearLabel">
                                                             <rect key="frame" x="0.0" y="60" width="164" height="20"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="20" id="fUf-yc-yEy"/>
