[ANDROID] - added cardview layout file

--- a/androidApp/GophertainmentAndroid/app/src/main/res/layout/activity_main.xml
+++ b/androidApp/GophertainmentAndroid/app/src/main/res/layout/activity_main.xml
@@ -16,10 +16,9 @@
             android:layout_height="wrap_content"
             android:inputType="textCapCharacters"
             android:ems="10"
-            android:id="@+id/editText"
+            android:id="@+id/searchStringET"
             android:hint="@string/search_hint"
             android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"/>
+            android:layout_alignParentStart="true"/>
 
 </RelativeLayout>
