--- a/androidApp/GophertainmentAndroid/app/src/main/res/layout/activity_main.xml
+++ b/androidApp/GophertainmentAndroid/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/activity_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context="com.gophertainment.gophertainmentandroid.MainActivity">
+        tools:context="com.gophertainment.gophertainmentandroid.activities.MainActivity">
 
     <EditText
             android:layout_width="match_parent"
@@ -17,8 +18,14 @@
             android:inputType="textCapCharacters"
             android:ems="10"
             android:id="@+id/searchStringET"
-            android:hint="@string/search_hint"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"/>
+            />
 
-</RelativeLayout>
+    <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/resultRecyclerView">
+
+    </android.support.v7.widget.RecyclerView>
+
+
+</LinearLayout>
