--- a/iosApp/Gophertainment/Gophertainment/Base.lproj/Main.storyboard
+++ b/iosApp/Gophertainment/Gophertainment/Base.lproj/Main.storyboard
@@ -22,14 +22,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="EXo-qJ-D1t" userLabel="searchTextField">
-                                <rect key="frame" x="16" y="28" width="343" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="EXo-qJ-D1t" userLabel="searchTextField">
+                                <rect key="frame" x="16" y="28" width="343" height="42"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="search"/>
                             </textField>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="qVM-92-o9r" userLabel="ResultCollectionView">
-                                <rect key="frame" x="16" y="66" width="343" height="601"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="qVM-92-o9r" userLabel="ResultCollectionView">
+                                <rect key="frame" x="16" y="85" width="343" height="582"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="gUC-UW-KGh">
                                     <size key="itemSize" width="164" height="260"/>
@@ -95,6 +95,7 @@
                                             <constraint firstItem="f7c-rk-HDm" firstAttribute="centerY" secondItem="cWB-OE-r3N" secondAttribute="centerY" id="veu-mu-qVH"/>
                                         </constraints>
                                         <connections>
+                                            <outlet property="posterInfoBgView" destination="OPR-fT-uOH" id="JXo-k5-rJl"/>
                                             <outlet property="resultPosterImage" destination="f7c-rk-HDm" id="98D-og-wAd"/>
                                             <outlet property="resultTitleLabel" destination="Ozw-vF-xoq" id="ctW-gJ-pxZ"/>
                                             <outlet property="resultYearLabel" destination="L6G-Cz-d4T" id="fbP-Oc-KLc"/>
@@ -109,7 +110,7 @@
                             <constraint firstItem="qVM-92-o9r" firstAttribute="width" secondItem="EXo-qJ-D1t" secondAttribute="width" id="JxE-HM-xdt"/>
                             <constraint firstItem="qVM-92-o9r" firstAttribute="centerX" secondItem="EXo-qJ-D1t" secondAttribute="centerX" id="WeU-WB-wbq"/>
                             <constraint firstItem="EXo-qJ-D1t" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="dPk-Zm-BPS"/>
-                            <constraint firstItem="qVM-92-o9r" firstAttribute="top" secondItem="EXo-qJ-D1t" secondAttribute="bottom" constant="8" id="mV7-sR-Kwb"/>
+                            <constraint firstItem="qVM-92-o9r" firstAttribute="top" secondItem="EXo-qJ-D1t" secondAttribute="bottom" constant="15" id="mV7-sR-Kwb"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="qVM-92-o9r" secondAttribute="bottom" id="sEG-dA-f7R"/>
                             <constraint firstItem="EXo-qJ-D1t" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="vcl-EN-HbP"/>
                         </constraints>
@@ -117,11 +118,99 @@
                     <connections>
                         <outlet property="searchResultCollectionView" destination="qVM-92-o9r" id="57p-kk-xsq"/>
                         <outlet property="searchTextField" destination="EXo-qJ-D1t" id="JLj-cj-Zj3"/>
+                        <segue destination="c85-qy-qIh" kind="presentation" identifier="PosterDetailVC" id="Ojn-il-Dtq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="116" y="123.68815592203899"/>
+        </scene>
+        <!--PosterDetailVC-->
+        <scene sceneID="5VR-nP-EB6">
+            <objects>
+                <viewController title="PosterDetailVC" modalPresentationStyle="overFullScreen" id="c85-qy-qIh" customClass="PosterDetailViewController" customModule="Gophertainment" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="85u-JW-G64"/>
+                        <viewControllerLayoutGuide type="bottom" id="svL-mM-tjQ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Jc6-nd-l2d">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yzJ-x3-U2C">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Yks-Ip-aJR">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                </view>
+                                <blurEffect style="light"/>
+                            </visualEffectView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q2l-Ay-CFL">
+                                <rect key="frame" x="11" y="20" width="352" height="33"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
+                                <state key="normal" title="CLOSE">
+                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="closePosterDetail:" destination="c85-qy-qIh" eventType="touchUpInside" id="jEB-j5-4YY"/>
+                                </connections>
+                            </button>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="maW-g0-oGY">
+                                <rect key="frame" x="0.0" y="60" width="375" height="607"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0wp-KI-Ykk">
+                                        <rect key="frame" x="10" y="8" width="355" height="200"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="200" id="3Cf-X4-dP3"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TITLE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AIq-zv-NyF">
+                                        <rect key="frame" x="12" y="216" width="355" height="45"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="gn2-ON-OcB"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="AIq-zv-NyF" firstAttribute="trailing" secondItem="maW-g0-oGY" secondAttribute="trailingMargin" id="IYv-31-y68"/>
+                                    <constraint firstItem="AIq-zv-NyF" firstAttribute="leading" secondItem="maW-g0-oGY" secondAttribute="leading" constant="12" id="MNv-B3-0lv"/>
+                                    <constraint firstItem="0wp-KI-Ykk" firstAttribute="centerX" secondItem="maW-g0-oGY" secondAttribute="centerX" id="ZnD-I1-P9Q"/>
+                                    <constraint firstAttribute="trailing" secondItem="0wp-KI-Ykk" secondAttribute="trailing" constant="10" id="g3s-bd-dEl"/>
+                                    <constraint firstAttribute="bottom" secondItem="AIq-zv-NyF" secondAttribute="bottom" constant="346" id="hYB-TD-Jez"/>
+                                    <constraint firstItem="0wp-KI-Ykk" firstAttribute="leading" secondItem="maW-g0-oGY" secondAttribute="leading" constant="10" id="k1z-AA-mOp"/>
+                                    <constraint firstItem="AIq-zv-NyF" firstAttribute="top" secondItem="0wp-KI-Ykk" secondAttribute="bottom" constant="8" symbolic="YES" id="l2x-oU-EBZ"/>
+                                    <constraint firstItem="0wp-KI-Ykk" firstAttribute="top" secondItem="maW-g0-oGY" secondAttribute="topMargin" id="yM6-Hu-Oyl"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="maW-g0-oGY" secondAttribute="trailing" id="2hy-EQ-Sfu"/>
+                            <constraint firstItem="yzJ-x3-U2C" firstAttribute="centerY" secondItem="Jc6-nd-l2d" secondAttribute="centerY" id="EfD-iR-1Wp"/>
+                            <constraint firstItem="maW-g0-oGY" firstAttribute="top" secondItem="Q2l-Ay-CFL" secondAttribute="bottom" constant="7" id="L5g-VM-hae"/>
+                            <constraint firstItem="yzJ-x3-U2C" firstAttribute="centerX" secondItem="Jc6-nd-l2d" secondAttribute="centerX" id="NPX-4m-4Dl"/>
+                            <constraint firstItem="yzJ-x3-U2C" firstAttribute="height" secondItem="Jc6-nd-l2d" secondAttribute="height" id="V1a-AS-U1l"/>
+                            <constraint firstItem="maW-g0-oGY" firstAttribute="leading" secondItem="Jc6-nd-l2d" secondAttribute="leading" id="YRl-cY-LeD"/>
+                            <constraint firstItem="yzJ-x3-U2C" firstAttribute="width" secondItem="Jc6-nd-l2d" secondAttribute="width" id="bce-9c-2mD"/>
+                            <constraint firstItem="Q2l-Ay-CFL" firstAttribute="top" secondItem="85u-JW-G64" secondAttribute="bottom" id="eUk-mQ-3pm"/>
+                            <constraint firstAttribute="trailing" secondItem="Q2l-Ay-CFL" secondAttribute="trailing" constant="12" id="ooK-Dl-md4"/>
+                            <constraint firstItem="Q2l-Ay-CFL" firstAttribute="leading" secondItem="Jc6-nd-l2d" secondAttribute="leading" constant="11" id="pW3-PZ-f4K"/>
+                            <constraint firstItem="svL-mM-tjQ" firstAttribute="top" secondItem="maW-g0-oGY" secondAttribute="bottom" id="y7U-g1-J5y"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="detailBackGroundView" destination="0wp-KI-Ykk" id="Km8-nD-hZr"/>
+                        <outlet property="detailTitleLabel" destination="AIq-zv-NyF" id="Qin-4f-XF5"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MVL-i2-cvh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="852" y="123.68815592203899"/>
         </scene>
     </scenes>
 </document>
